working server for users

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=server
+spring.application.name=kitnaserver
+spring.datasource.url=jdbc:mariadb://localhost:3306/kitnagradina
+spring.datasource.username=kitna
+spring.datasource.password=kitna123$%
+server.port=13000
