--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KitnaApp",
+  "name": "kitnaapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-maps": "^1.15.1",
-    "react-native-rename": "^3.2.14"
+    "react-native-maps": "^1.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
