--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -113,6 +113,15 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    //implementation(project(':react-native-onesignal')) {
+    //exclude group: 'com.google.android.gms'
+    //}
+    implementation(project(':react-native-maps')) {
+        exclude group: 'com.google.android.gms'
+    }
+    implementation('com.google.android.gms:play-services-base:18.4.0')
+    implementation('com.google.android.gms:play-services-location:21.2.0')
+    implementation('com.google.android.gms:play-services-maps:18.2.0')
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
