--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-maps": "^1.15.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^4.1.5"
   },
   "devDependencies": {
