--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,9 @@
     "@react-native-community/geolocation": "^3.2.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-date-picker": "^5.0.4",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-geocoding": "^0.5.0",
     "react-native-maps": "^1.15.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^4.1.5"
