fix up server problems due to untested apis

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=kitnaserver
-spring.datasource.url=jdbc:mariadb://localhost:3306/kitnagradina
-spring.datasource.username=kitna
-spring.datasource.password=kitna123$%
+spring.datasource.url=jdbc:postgresql://localhost/kitnagradina?user=kitnagradina&password=kitnagradina
+spring.datasource.jdbc-url=${spring.datasource.url}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.platform=postgres
 server.port=13000
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
